--- a/financeCSS/index.html
+++ b/financeCSS/index.html
@@ -60,8 +60,20 @@
             </table>
             <table>
                 <caption>Liabilities</caption>
-                <thead></thead>
-                <tbody></tbody>
+                <thead>
+                    <tr>
+                        <td></td>
+                        <th><span class="sr-only">2020</span></th>
+                        <th><span class="sr-only">2021</span></th>
+                        <th><span class="sr-only">2022</span></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="data"></tr>
+                    <tr class="data"></tr>
+                    <tr class="data"></tr>
+                    <tr class="total"></tr>
+                </tbody>
             </table>
             <table>
                 <caption></caption>
